--- a/index.html
+++ b/index.html
@@ -1998,7 +1998,7 @@ a.reset-link {
       <div class="row">
         <div class="columns small-12 grades-toggle-wrapper">
           <!--View all link-->
-          <!----><a ng-if="!previousTerm" bb-peek-sref="::baseGradesStudent.getViewAllCourseworkPeekRef()" class="grades-toggle right" aria-expanded="false" bb-translate-attrs="{&#39;aria-label&#39;: &#39;components.directives.grade.base-grades-student.aria-label.viewAll&#39;}" translate-attrs-values="{courseName: course.displayName, count: baseGradesStudent.totalNumberOfGradeItems}" analytics-id="components.directives.grades.studentGrades.viewAll.link" href="https://huskyct.uconn.edu/ultra//_148134_1/grades" aria-label="View all work for CSE-3100-System Design-SEC015L-1243, (32)">
+          <!----><a ng-if="!previousTerm" bb-peek-sref="::baseGradesStudent.getViewAllCourseworkPeekRef()" class="grades-toggle right" aria-expanded="false" bb-translate-attrs="{&#39;aria-label&#39;: &#39;components.directives.grade.base-grades-student.aria-label.viewAll&#39;}" translate-attrs-values="{courseName: course.displayName, count: baseGradesStudent.totalNumberOfGradeItems}" analytics-id="components.directives.grades.studentGrades.viewAll.link" href="cse3100.html" aria-label="View all work for CSE-3100-System Design-SEC015L-1243, (32)">
             <!--View all coursework-->
             <span ng-hide="baseGradesStudent.showAllGrades" bb-translate="" translate-values="{ count: baseGradesStudent.totalNumberOfGradeItems }">View all work (32)</span>
             <!--Hide-->
@@ -2252,7 +2252,7 @@ a.reset-link {
       <div class="row">
         <div class="columns small-12 grades-toggle-wrapper">
           <!--View all link-->
-          <!----><a ng-if="!previousTerm" bb-peek-sref="::baseGradesStudent.getViewAllCourseworkPeekRef()" class="grades-toggle right" aria-expanded="false" bb-translate-attrs="{&#39;aria-label&#39;: &#39;components.directives.grade.base-grades-student.aria-label.viewAll&#39;}" translate-attrs-values="{courseName: course.displayName, count: baseGradesStudent.totalNumberOfGradeItems}" analytics-id="components.directives.grades.studentGrades.viewAll.link" href="https://huskyct.uconn.edu/ultra//_147981_1/outline?legacyUrl=~2Fwebapps~2Fgradebook~2Fdo~2Fstudent~2FviewGrades%3Fcourse_id%3D_147981_1%26callback%3Dcourse" aria-label="View all work for CSE-2500-Intro to Discrete Math-SEC104L-1243, (19)">
+          <!----><a ng-if="!previousTerm" bb-peek-sref="::baseGradesStudent.getViewAllCourseworkPeekRef()" class="grades-toggle right" aria-expanded="false" bb-translate-attrs="{&#39;aria-label&#39;: &#39;components.directives.grade.base-grades-student.aria-label.viewAll&#39;}" translate-attrs-values="{courseName: course.displayName, count: baseGradesStudent.totalNumberOfGradeItems}" analytics-id="components.directives.grades.studentGrades.viewAll.link" href="cse2500.html" aria-label="View all work for CSE-2500-Intro to Discrete Math-SEC104L-1243, (19)">
             <!--View all coursework-->
             <span ng-hide="baseGradesStudent.showAllGrades" bb-translate="" translate-values="{ count: baseGradesStudent.totalNumberOfGradeItems }">View all work (19)</span>
             <!--Hide-->
@@ -2658,7 +2658,7 @@ a.reset-link {
       <div class="row">
         <div class="columns small-12 grades-toggle-wrapper">
           <!--View all link-->
-          <!----><a ng-if="!previousTerm" bb-peek-sref="::baseGradesStudent.getViewAllCourseworkPeekRef()" class="grades-toggle right" aria-expanded="false" bb-translate-attrs="{&#39;aria-label&#39;: &#39;components.directives.grade.base-grades-student.aria-label.viewAll&#39;}" translate-attrs-values="{courseName: course.displayName, count: baseGradesStudent.totalNumberOfGradeItems}" analytics-id="components.directives.grades.studentGrades.viewAll.link" href="https://huskyct.uconn.edu/ultra//_141820_1/outline?legacyUrl=~2Fwebapps~2Fgradebook~2Fdo~2Fstudent~2FviewGrades%3Fcourse_id%3D_141820_1%26callback%3Dcourse" aria-label="View all work for MATH-2110Q-Calculus III-SEC030-1243, (27)">
+          <!----><a ng-if="!previousTerm" bb-peek-sref="::baseGradesStudent.getViewAllCourseworkPeekRef()" class="grades-toggle right" aria-expanded="false" bb-translate-attrs="{&#39;aria-label&#39;: &#39;components.directives.grade.base-grades-student.aria-label.viewAll&#39;}" translate-attrs-values="{courseName: course.displayName, count: baseGradesStudent.totalNumberOfGradeItems}" analytics-id="components.directives.grades.studentGrades.viewAll.link" href="math.html" aria-label="View all work for MATH-2110Q-Calculus III-SEC030-1243, (27)">
             <!--View all coursework-->
             <span ng-hide="baseGradesStudent.showAllGrades" bb-translate="" translate-values="{ count: baseGradesStudent.totalNumberOfGradeItems }">View all work (27)</span>
             <!--Hide-->
@@ -2988,7 +2988,7 @@ a.reset-link {
       <div class="row">
         <div class="columns small-12 grades-toggle-wrapper">
           <!--View all link-->
-          <!----><a ng-if="!previousTerm" bb-peek-sref="::baseGradesStudent.getViewAllCourseworkPeekRef()" class="grades-toggle right" aria-expanded="false" bb-translate-attrs="{&#39;aria-label&#39;: &#39;components.directives.grade.base-grades-student.aria-label.viewAll&#39;}" translate-attrs-values="{courseName: course.displayName, count: baseGradesStudent.totalNumberOfGradeItems}" analytics-id="components.directives.grades.studentGrades.viewAll.link" href="https://huskyct.uconn.edu/ultra//_147548_1/outline?legacyUrl=~2Fwebapps~2Fgradebook~2Fdo~2Fstudent~2FviewGrades%3Fcourse_id%3D_147548_1%26callback%3Dcourse" aria-label="View all work for PHYS-1602Q-Fundamentals of Physics II-SEC002-1243, (61)">
+          <!----><a ng-if="!previousTerm" bb-peek-sref="::baseGradesStudent.getViewAllCourseworkPeekRef()" class="grades-toggle right" aria-expanded="false" bb-translate-attrs="{&#39;aria-label&#39;: &#39;components.directives.grade.base-grades-student.aria-label.viewAll&#39;}" translate-attrs-values="{courseName: course.displayName, count: baseGradesStudent.totalNumberOfGradeItems}" analytics-id="components.directives.grades.studentGrades.viewAll.link" href="physics.html" aria-label="View all work for PHYS-1602Q-Fundamentals of Physics II-SEC002-1243, (61)">
             <!--View all coursework-->
             <span ng-hide="baseGradesStudent.showAllGrades" bb-translate="" translate-values="{ count: baseGradesStudent.totalNumberOfGradeItems }">View all work (61)</span>
             <!--Hide-->
@@ -3682,7 +3682,7 @@ a.reset-link {
       <div class="row">
         <div class="columns small-12 grades-toggle-wrapper">
           <!--View all link-->
-          <!----><a ng-if="!previousTerm" bb-peek-sref="::baseGradesStudent.getViewAllCourseworkPeekRef()" class="grades-toggle right" aria-expanded="false" bb-translate-attrs="{&#39;aria-label&#39;: &#39;components.directives.grade.base-grades-student.aria-label.viewAll&#39;}" translate-attrs-values="{courseName: course.displayName, count: baseGradesStudent.totalNumberOfGradeItems}" analytics-id="components.directives.grades.studentGrades.viewAll.link" href="https://huskyct.uconn.edu/ultra//_148134_1/grades" aria-label="View all work for CSE-3100-System Design-SEC015L-1243, (32)">
+          <!----><a ng-if="!previousTerm" bb-peek-sref="::baseGradesStudent.getViewAllCourseworkPeekRef()" class="grades-toggle right" aria-expanded="false" bb-translate-attrs="{&#39;aria-label&#39;: &#39;components.directives.grade.base-grades-student.aria-label.viewAll&#39;}" translate-attrs-values="{courseName: course.displayName, count: baseGradesStudent.totalNumberOfGradeItems}" analytics-id="components.directives.grades.studentGrades.viewAll.link" href="cse3100.html" aria-label="View all work for CSE-3100-System Design-SEC015L-1243, (32)">
             <!--View all coursework-->
             <span ng-hide="baseGradesStudent.showAllGrades" bb-translate="" translate-values="{ count: baseGradesStudent.totalNumberOfGradeItems }">View all work (32)</span>
             <!--Hide-->
@@ -3936,7 +3936,7 @@ a.reset-link {
       <div class="row">
         <div class="columns small-12 grades-toggle-wrapper">
           <!--View all link-->
-          <!----><a ng-if="!previousTerm" bb-peek-sref="::baseGradesStudent.getViewAllCourseworkPeekRef()" class="grades-toggle right" aria-expanded="false" bb-translate-attrs="{&#39;aria-label&#39;: &#39;components.directives.grade.base-grades-student.aria-label.viewAll&#39;}" translate-attrs-values="{courseName: course.displayName, count: baseGradesStudent.totalNumberOfGradeItems}" analytics-id="components.directives.grades.studentGrades.viewAll.link" href="https://huskyct.uconn.edu/ultra//_147981_1/outline?legacyUrl=~2Fwebapps~2Fgradebook~2Fdo~2Fstudent~2FviewGrades%3Fcourse_id%3D_147981_1%26callback%3Dcourse" aria-label="View all work for CSE-2500-Intro to Discrete Math-SEC104L-1243, (19)">
+          <!----><a ng-if="!previousTerm" bb-peek-sref="::baseGradesStudent.getViewAllCourseworkPeekRef()" class="grades-toggle right" aria-expanded="false" bb-translate-attrs="{&#39;aria-label&#39;: &#39;components.directives.grade.base-grades-student.aria-label.viewAll&#39;}" translate-attrs-values="{courseName: course.displayName, count: baseGradesStudent.totalNumberOfGradeItems}" analytics-id="components.directives.grades.studentGrades.viewAll.link" href="cse2500.html" aria-label="View all work for CSE-2500-Intro to Discrete Math-SEC104L-1243, (19)">
             <!--View all coursework-->
             <span ng-hide="baseGradesStudent.showAllGrades" bb-translate="" translate-values="{ count: baseGradesStudent.totalNumberOfGradeItems }">View all work (19)</span>
             <!--Hide-->
@@ -4342,7 +4342,7 @@ a.reset-link {
       <div class="row">
         <div class="columns small-12 grades-toggle-wrapper">
           <!--View all link-->
-          <!----><a ng-if="!previousTerm" bb-peek-sref="::baseGradesStudent.getViewAllCourseworkPeekRef()" class="grades-toggle right" aria-expanded="false" bb-translate-attrs="{&#39;aria-label&#39;: &#39;components.directives.grade.base-grades-student.aria-label.viewAll&#39;}" translate-attrs-values="{courseName: course.displayName, count: baseGradesStudent.totalNumberOfGradeItems}" analytics-id="components.directives.grades.studentGrades.viewAll.link" href="https://huskyct.uconn.edu/ultra//_141820_1/outline?legacyUrl=~2Fwebapps~2Fgradebook~2Fdo~2Fstudent~2FviewGrades%3Fcourse_id%3D_141820_1%26callback%3Dcourse" aria-label="View all work for MATH-2110Q-Calculus III-SEC030-1243, (27)">
+          <!----><a ng-if="!previousTerm" bb-peek-sref="::baseGradesStudent.getViewAllCourseworkPeekRef()" class="grades-toggle right" aria-expanded="false" bb-translate-attrs="{&#39;aria-label&#39;: &#39;components.directives.grade.base-grades-student.aria-label.viewAll&#39;}" translate-attrs-values="{courseName: course.displayName, count: baseGradesStudent.totalNumberOfGradeItems}" analytics-id="components.directives.grades.studentGrades.viewAll.link" href="math.html" aria-label="View all work for MATH-2110Q-Calculus III-SEC030-1243, (27)">
             <!--View all coursework-->
             <span ng-hide="baseGradesStudent.showAllGrades" bb-translate="" translate-values="{ count: baseGradesStudent.totalNumberOfGradeItems }">View all work (27)</span>
             <!--Hide-->
@@ -4596,7 +4596,7 @@ a.reset-link {
       <div class="row">
         <div class="columns small-12 grades-toggle-wrapper">
           <!--View all link-->
-          <!----><a ng-if="!previousTerm" bb-peek-sref="::baseGradesStudent.getViewAllCourseworkPeekRef()" class="grades-toggle right" aria-expanded="false" bb-translate-attrs="{&#39;aria-label&#39;: &#39;components.directives.grade.base-grades-student.aria-label.viewAll&#39;}" translate-attrs-values="{courseName: course.displayName, count: baseGradesStudent.totalNumberOfGradeItems}" analytics-id="components.directives.grades.studentGrades.viewAll.link" href="https://huskyct.uconn.edu/ultra//_147548_1/outline?legacyUrl=~2Fwebapps~2Fgradebook~2Fdo~2Fstudent~2FviewGrades%3Fcourse_id%3D_147548_1%26callback%3Dcourse" aria-label="View all work for PHYS-1602Q-Fundamentals of Physics II-SEC002-1243, (61)">
+          <!----><a ng-if="!previousTerm" bb-peek-sref="::baseGradesStudent.getViewAllCourseworkPeekRef()" class="grades-toggle right" aria-expanded="false" bb-translate-attrs="{&#39;aria-label&#39;: &#39;components.directives.grade.base-grades-student.aria-label.viewAll&#39;}" translate-attrs-values="{courseName: course.displayName, count: baseGradesStudent.totalNumberOfGradeItems}" analytics-id="components.directives.grades.studentGrades.viewAll.link" href="physics.html" aria-label="View all work for PHYS-1602Q-Fundamentals of Physics II-SEC002-1243, (61)">
             <!--View all coursework-->
             <span ng-hide="baseGradesStudent.showAllGrades" bb-translate="" translate-values="{ count: baseGradesStudent.totalNumberOfGradeItems }">View all work (61)</span>
             <!--Hide-->
